--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-quarkus.container-image.build=true
+#quarkus.container-image.build=true
 #quarkus.container-image.group=
-quarkus.container-image.name=devnation-operator
+#quarkus.container-image.name=devnation-operator
