--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,8 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <fabric8-client.version>5.4.1</fabric8-client.version>
-    <quarkus-sdk.version>1.9.3</quarkus-sdk.version>
-    <quarkus.version>1.13.7.Final</quarkus.version>
+    <quarkus-sdk.version>2.0.0.Beta2-SNAPSHOT</quarkus-sdk.version>
+    <quarkus.version>2.0.0.CR3</quarkus.version>
     <quarkus.native.builder-image>quay.io/quarkus/ubi-quarkus-native-image:19.3.1-java11</quarkus.native.builder-image>
   </properties>
 
